# PlantAssistant

./: .envrc  Dockerfile.dev  Makefile  README.md  admin.py  app.py  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  schema.graphql  setup.cfg
.devcontainer/: devcontainer.json
docker/: docker-compose._base.yml  entrypoint.sh
docker/homeassistant/empty_instance/: auth  auth_provider.homeassistant  core.config  core.config_entries  core.entity_registry  core.uuid  frontend.user_data_f1ef4250f87c4719bc4582163da819aa  http.auth  person  repairs.issue_registry
docs/images/: ha_integration.excalidraw
fastadmin/: Pipfile  handler.py  resources.py  tables.py  utils.py
fastadmin/ui/: package.json
fastadmin/ui/src/: App.tsx  Layout.tsx  dev_schema.ts
fastadmin/ui/src/components/: Create.tsx  TableList.tsx
plantassistant/: app_celery.py  db.py  main.py
plantassistant/app/: __init__.py  common.py  utils.py
plantassistant/app/locations/: constants.py  models.py
plantassistant/app/locations/schema/: types.py
plantassistant/app/plants/: models.py  recipes.py
plantassistant/app/plants/schema/: types.py
plantassistant/app/schemes/: constants.py  models.py
plantassistant/app/users/: models.py  views.py
plantassistant/migrations/models/: 0_20221030022449_init.py
plantassistant/settings/: defaults.py  test_settings.py
solar_weather/: secrets.yaml  solar_weather.yaml
tests/: conftest.py  test_homeassistant.py  test_login.py
tests/fixtures/weather/: basic.yaml  freezing.yaml  freezing_forecast.yaml
(+3 files in other folders)
