[metadata]
name = PlantAssistant
version = 1.0.0
license = MIT
maintainer = Leeward Bound
maintainer_email = leeward@boundcorp.net
description = Your ultimate PlantAssistant!
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true

[options.extras_require]
test =
    pytest

[tool:pytest]
addopts = -ra
testpaths = tests
; Add vendor and patched in addition to the default list of ignored dirs
; Additionally, ignore tasks, news, test subdirectories and peeps directory
norecursedirs =
    .* build
    dist
    *.egg
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[coverage:run]
branch = True
source =
    app
